--- a/shekar/13_September/views/sample.erb
+++ b/shekar/13_September/views/sample.erb
@@ -1,11 +1,31 @@
-<% i=10
-   j=10
-   a=Array.new 
-   for i in 1..10
-     for j in 1..i %>
-       <%=" *".to_s%>
-<%     end %>
-     <%="<br>".to_s%>
-<%   end %>
-
+<html>
+<head><title>Pascals triangle</title></head>
+<body>
+<center>
+<form id="form1">
+<table border=1 bgcolor=#FAF0E6 width=500>
+<tr align=center><th><b>Pascals Triangle</b><br><br></th></tr>
+<tr align=center><td>
+<% 
+class Triangle
+ include Enumerable
+ def pascal(n)
+	p=[1]
+	while p.size < n %>
+		<%= p.join("&nbsp") %>
+<%              	p=Array.new(p.length+1) {|i| 
+			a=i<p.length ? p[i] : 0
+			b=i>0 ? p[i-1] : 0
+			a+b}
+	end
+end
+end
+t=Triangle.new %>
+<%=t.pascal(10) %>
+</td></tr>
+</table>
+</form>
+</center>
+</body>
+</html>
 
