--- a/shekar/13_September/views/sample.erb
+++ b/shekar/13_September/views/sample.erb
@@ -7,21 +7,26 @@
 <tr align=center><th><b>Pascals Triangle</b><br><br></th></tr>
 <tr align=center><td>
 <% 
-class Triangle
- include Enumerable
- def pascal(n)
-	p=[1]
-	while p.size < n %>
-		<%= p.join("&nbsp") %>
-<%              	p=Array.new(p.length+1) {|i| 
-			a=i<p.length ? p[i] : 0
-			b=i>0 ? p[i-1] : 0
-			a+b}
-	end
-end
-end
-t=Triangle.new %>
-<%=t.pascal(10) %>
+  def factorial(n1)
+   res=1
+    for c2 in 1..n1
+         res = res*c2
+    end
+   return res
+  end
+  n=5
+  k=0
+  for i in 0..n
+      m=n-i-2
+      for c in 0..m %>
+<%=       " ".to_s  %>
+<%    end
+      for c1 in 0..i %>
+<%=      factorial(i)/(factorial(c1)*factorial(i-c1)).to_i %>
+<%    end %>
+<%= "<br>".to_s %>
+<% end %>
+
 </td></tr>
 </table>
 </form>
