Code to print pascals triangle - works correctly

--- a/shekar/13_September/views/sample.erb
+++ b/shekar/13_September/views/sample.erb
@@ -6,6 +6,7 @@
 <table border=1 bgcolor=#FAF0E6 width=500>
 <tr align=center><th><b>Pascals Triangle</b><br><br></th></tr>
 <tr align=center><td>
+
 <% 
   def factorial(n1)
    res=1
@@ -14,7 +15,7 @@
     end
    return res
   end
-  n=5
+  n=10
   k=0
   for i in 0..n
       m=n-i-2
@@ -27,6 +28,7 @@
 <%= "<br>".to_s %>
 <% end %>
 
+</script>
 </td></tr>
 </table>
 </form>
