Anagram class modified - works correctly

--- a/shekar/16_September/views/anagram.erb
+++ b/shekar/16_September/views/anagram.erb
@@ -5,9 +5,9 @@
 <form id="form1" method="get" action="/get_input">
 <table border=1 bgcolor=#FAF0E6 width=500>
 <tr align=center><th><b>Anagram string</b><br><br></th></tr>
-<tr align=center><td>
-Input first string  : <input type="text" name="text1" id="text1"><br>"
-Input second string : <input type="text" name="text2" id="text2"><br>"
+<tr align=center><td><br>
+Input first string  : <input type="text" name="text1" id="text1"><br>
+Input second string : <input type="text" name="text2" id="text2"><br>
 <input type="submit" name="Submit" value="Submit">
 
 </td></tr>
