Code to check for anagram strings - works good

--- a/shekar/16_September/views/anagram.erb
+++ b/shekar/16_September/views/anagram.erb
@@ -6,10 +6,9 @@
 <table border=1 bgcolor=#FAF0E6 width=500>
 <tr align=center><th><b>Anagram string</b><br><br></th></tr>
 <tr align=center><td><br>
-Input first string  : <input type="text" name="text1" id="text1"><br>
-Input second string : <input type="text" name="text2" id="text2"><br>
-<input type="submit" name="Submit" value="Submit">
-
+Input first string  &nbsp;&nbsp;&nbsp;&nbsp;: <input type="text" name="text1" id="text1"><br>
+Input second string : <input type="text" name="text2" id="text2"><br><br>
+<input type="submit" name="Submit" value="Submit"><br>
 </td></tr>
 </table>
 </form>
