Modified the structure definition for employee class and webpage file

--- a/shekar/16_September/views/employee.erb
+++ b/shekar/16_September/views/employee.erb
@@ -4,14 +4,18 @@
 <script type="text/javascript">
 function clear_all()
 {
-//alert("hi")
-document.getElementById('id').value = "";
-document.getElementById('name').value = "";
-document.getElementById('desig').value = "";
-document.getElementById('grade').value = "";
-document.getElementById('qcc_team').value = "";
-document.getElementById('qcc_expo').value = "";
-document.getElementById("id").focus();
+alert("hi")
+document.getElementById('task').value="insert";
+alert(document.getElementById('task').value);
+/*document.getElementsByName('id')[0].value = "123";
+document.getElementsByName('name')[1].value = "";
+document.getElementsByName('desig')[2].value = "";
+document.getElementsByName('grade')[3].value = "";
+document.getElementsByName('qcc_team')[4].value = "";
+document.getElementsByName'qcc_expo')[5].value = "";
+document.getElementsByName("id")[0].focus();
+alert(document.getElementById('task').value);
+alert(document.form1.elements['task'].value);%/
 }
 </script>
 <center>
@@ -19,17 +23,18 @@ document.getElementById("id").focus();
 <form id="form1" method="get" action="" onsubmit="">
 <table border=1 bgcolor=#FAF0E6 width=500>
 <tr><th colspan="2"><b>Employee Data</b></th></tr>
-<tr><td>ID No </td><td><input type="text" name="id"> </td></tr>
+<tr><td>ID No </td><td><input type="text" name="id" id="id"> </td></tr>
 <tr><td>Name </td><td><input type="text" name="name"> </td></tr>
 <tr><td>Designation </td><td><input type="text" name="desig"> </td></tr>
 <tr><td>Grade </td><td><input type="text" name="grade"> </td></tr>
 <tr><td>QCC Team </td><td><input type="text" name="qcc_team"> </td></tr>
 <tr><td>QCC expo </td><td><input type="text" name="qcc_expo"> </td></tr>
-<tr><td colspan="2">
+<tr><td colspan="2" align="center">
 <input id="save" type="submit" name="Save" value="Save">  
-<input id="new" type="button" name="New" value="New" onclick="clear_all()">
+<input id="new" type="reset" name="New" value="New">
 <button id="delete" type="button" onclick="clear_all()">Delete</button>
 <button id="update" type="button" onclick="">Update</button>
+<input type="hidden" id="task" name="task" value=""/>
 </td></tr>
 </table>
 </form>
