--- a/shekar/16_September/views/employee.erb
+++ b/shekar/16_September/views/employee.erb
@@ -2,26 +2,7 @@
 <head><title>Rane Engine Valve Ltd</title></head>
 <body>
 <script type="text/javascript">
-function clear_all()
-{
-document.getElementById('task').value="delete";
-alert(document.getElementById('task').value);
-/*document.getElementsByName('id')[0].value = "123";
-document.getElementsByName('name')[1].value = "";
-document.getElementsByName('desig')[2].value = "";
-document.getElementsByName('grade')[3].value = "";
-document.getElementsByName('qcc_team')[4].value = "";
-document.getElementsByName'qcc_expo')[5].value = "";
-document.getElementsByName("id")[0].focus();
-alert(document.getElementById('task').value);
-alert(document.form1.elements['task'].value);*/
-}
-funtion insert()
-{
-document.getElementById('task').value="insert";
-alert(document.getElementById('task').value);
-}
-funtion view()
+function view()
 {
 document.getElementById('task').value="view";
 alert(document.getElementById('task').value);
@@ -39,13 +20,15 @@ alert(document.getElementById('task').value);
 <tr><td>QCC Team </td><td><input type="text" name="qcc_team"> </td></tr>
 <tr><td>QCC expo </td><td><input type="text" name="qcc_expo"> </td></tr>
 <tr><td colspan="2" align="center">
-<input id="save" type="submit" name="Save" value="Save" onsubmit="insert()">  
-<input id="new" type="reset" name="New" value="New">
-<button id="delete" type="button" onclick="clear_all()">Delete</button>
-<button id="update" type="button" onclick="">Update</button>
-<input type="hidden" id="task" name="task" value="task"/>
-<button id="view1" type="button" onclick="view()">View1</button>
-<input id="view" type="submit" name="View" value="View" onclick="view()"> 
+
+<input type="submit" id="save"   name="Save"   value="Save" onclick="">  
+<input type="reset"  id="new"    name="New"    value="New">
+<input type="button" id="delete" name="Delete" value="Delete" onclick="">
+<input type="button" id="update" name="Update" value="Update" onclick="">
+<input type="hidden" id="task"   name="task"   value="task">
+<input type="button" id="view"   name="View"   value="View" onclick="view()">
+
+<button type="button" id="view1" onclick="view()">View1</button>
 </td></tr>
 </table>
 </form>
