App to insert,select,update and delete employee data  using ERB - code works correctly

--- a/shekar/16_September/views/employee1.erb
+++ b/shekar/16_September/views/employee1.erb
@@ -6,7 +6,7 @@ function check_clicked()
 {  
   document.getElementById('task').value="select";
   //alert(document.getElementById('task').value);
-  window.location="http://127.0.0.1:4567/get_data";
+  //window.location="http://127.0.0.1:4567/get_data";
 }
 function check_clicked1()
 {  
