--- a/raj/13thsep/styles.css
+++ b/raj/13thsep/styles.css
@@ -1,7 +1,7 @@
 #header {
     margin-top:0px;
-    height:50px;
-    background:#00BFFF;
+    height:80px;
+    background:#D3D3D3;
     margin-bottom:50px;
 }
 #footer {
