--- a/raj/12thsep/style1.css
+++ b/raj/12thsep/style1.css
@@ -1,3 +1,15 @@
 h2{
 color:red;
 }
+	#header {
+	    margin-top:0px;
+	    height:80px;
+	    background:#D3D3D3;
+	    margin-bottom:50px;
+  	}
+	#footer {
+	    height: 30px;
+	    background:white;
+	    position: absolute;
+            margin-bottom: 0;
+  	}
